--- a/assets/components/image.html
+++ b/assets/components/image.html
@@ -293,6 +293,10 @@
       throw new Error("Missing src");
     }
 
+    // if (cfg.src[0] === '/') cfg.src = `${location.origin}/${cfg.src}`
+
+    console.log(cfg)
+
     setContainerHeight();
 
     // =========================================================================
