--- a/_includes/embed/image-compare.html
+++ b/_includes/embed/image-compare.html
@@ -25,6 +25,10 @@ Build query string
 {%- endif -%}
 
 <iframe id="{{ include.id }}" class="embed-image-compare" loading="lazy" title="Image comparison"
-  allow="clipboard-write" {% if include.aspect %} style="width:100%; aspect-ratio: {{ include.aspect }};" {% endif %}
-  src="{{ '/assets/components/image-compare.html' | relative_url }}?{{ qs }}" allowfullscreen>
+  allow="clipboard-write"
+  src="{{ '/assets/components/image-compare.html' | relative_url }}?{{ qs }}"
+  {% if include.width %} width="{{ include.width }}" {% endif %}
+  {% if include.height %} height="{{ include.height }}" {% endif %}
+  style="aspect-ratio: {{ include.aspect | default: 1 }};"
+  allowfullscreen>
 </iframe>
