--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -191,3 +191,24 @@ a.trigger {
 a.trigger:hover {
     background-color: rgba(250, 128, 114, 0.2)
 }
+
+iframe.embed-youtube {
+    width: 100%;
+    aspect-ratio: 1.55;
+}
+
+figure.iframe-wrapper iframe {
+    width: 100%;
+    aspect-ratio: 0.59
+}
+
+figure.iframe-wrapper figcaption {
+    font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif;
+    text-align: center;
+    font-size: 16px;
+    line-height: 28px;
+}
+
+.post-content {
+    margin-bottom: 60dvh;
+}
