--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,93 +38,91 @@ script_includes:
       {% endif %}
 
       {% if page.image %}
-      {%- assign raw_src = page.image.path | default: page.image -%}
-      {%- assign transform = page.image.transform | default: "w_1200,h_630,c_fill" -%}
+      {% assign raw_src = page.image.path | default: page.image %}
 
-      {%- capture raw_src -%}
-      {%- include url_from_src.html src=raw_src -%}
+      {%- capture src -%}
+      {%- include url_from_src.html src=raw_src media_subpath=page.media_subpath mw_width=1200 -%}
       {%- endcapture -%}
+      {%- assign src = src | strip -%}
 
-      {% assign prefix2 = raw_src | slice: 0, 2 %}
-      {% assign prefix4 = raw_src | slice: 0, 4 %}
+      {%- assign commons_thumb_prefix = "https://upload.wikimedia.org/wikipedia/commons/thumb" -%}
 
-      {% if prefix4 != 'http' and prefix2 != '//' %}
-      {% assign raw_src = site.url | append: raw_src %}
+      {%- assign do_resize = true -%}
+
+      {%- if page.image.resize == false -%}
+      {%- assign do_resize = false -%}
+      {%- elsif src contains commons_thumb_prefix -%}
+      {%- assign do_resize = false -%}
+      {%- endif -%}
+
+      {%- if do_resize -%}
+      {%- assign base = "https://res.cloudinary.com/dmceci9t1/image/fetch/" -%}
+      {%- assign transform_safe = "w_1200,h_630" -%}
+      {%- assign src_safe = src | url_encode -%}
+      {%- assign final_src = base | append: transform_safe | append: "/" | append: src_safe -%}
+      {%- else -%}
+      {%- assign final_src = src -%}
+      {%- endif -%}
+
+      {% capture src %}src="{{ final_src }}"{% endcapture %}
+
+      {% capture class %}class="preview-img{% if page.image.no_bg %} no-bg{% endif %}"{% endcapture %}
+      {% capture alt %}alt="{{ page.image.alt | xml_escape | default: "Preview Image" }}"{% endcapture %}
+
+      {% if page.image.lqip %}
+      {%- capture lqip -%}lqip="{{ page.image.lqip }}"{%- endcapture -%}
       {% endif %}
 
-      {%- comment -%}
-      Rewrite src to:
-      https://res.cloudinary.com/dmceci9t1/image/fetch/<transform>/<src>
+      <div class="mt-3 mb-3">
+        <img {{ src }} {{ class }} {{ alt }} w="1200" h="630" {{ lqip }}>
+        {%- if page.image.alt -%}
+        <figcaption class="text-center pt-2 pb-2">{{ page.image.alt }}</figcaption>
+        {%- endif -%}
+      </div>
+      {% endif %}
 
-          Rules:
-          - Preserve slashes (service supports them)
-          - Replace spaces with %20 (Commons filenames, etc.)
-          - Clean up accidental double slashes
-          {%- endcomment -%}
-
-          {%- assign base = "https://res.cloudinary.com/dmceci9t1/image/fetch/" -%}
-          {%- assign src_safe = raw_src | strip | replace: ' ', '%20' -%}
-          {%- assign transform_safe = transform | strip | replace: ' ', '%20' -%}
-          {%- assign cloudinary_src = base | append: transform_safe | append: '/' | append: src_safe -%}
-
-          {% capture src %}src="{{ cloudinary_src }}"{% endcapture %}
-          {% capture class %}class="preview-img{% if page.image.no_bg %} no-bg{% endif %}"{% endcapture %}
-          {% capture alt %}alt="{{ page.image.alt | xml_escape | default: "Preview Image" }}"{% endcapture %}
-
-          {% if page.image.lqip %}
-          {%- capture lqip -%}lqip="{{ page.image.lqip }}"{%- endcapture -%}
+      <div class="d-flex justify-content-between">
+        <!-- author(s) -->
+        <span>
+          {% if page.author %}
+          {% assign authors = page.author %}
+          {% elsif page.authors %}
+          {% assign authors = page.authors %}
           {% endif %}
 
-          <div class="mt-3 mb-3">
-            <img {{ src }} {{ class }} {{ alt }} w="1200" h="630" {{ lqip }}>
-            {%- if page.image.alt -%}
-            <figcaption class="text-center pt-2 pb-2">{{ page.image.alt }}</figcaption>
-            {%- endif -%}
-          </div>
+          {{ site.data.locales[lang].post.written_by }}
+
+          <em>
+            {% if authors %}
+            {% for author in authors %}
+            {% if site.data.authors[author].url -%}
+            <a href="{{ site.data.authors[author].url }}">{{ site.data.authors[author].name }}</a>
+            {%- else -%}
+            {{ site.data.authors[author].name | default: author }}
+            {%- endif %}
+            {% unless forloop.last %}{{ '</em>, <em>' }}{% endunless %}
+            {% endfor %}
+            {% else %}
+            <a href="{{ site.social.links[0] }}">{{ site.social.name }}</a>
+            {% endif %}
+          </em>
+        </span>
+
+        <div>
+          <!-- pageviews -->
+          {% if site.pageviews.provider and site.analytics[site.pageviews.provider].id %}
+          <span>
+            <em id="pageviews">
+              <i class="fas fa-spinner fa-spin small"></i>
+            </em>
+            {{ site.data.locales[lang].post.pageview_measure }}
+          </span>
           {% endif %}
 
-          <div class="d-flex justify-content-between">
-            <!-- author(s) -->
-            <span>
-              {% if page.author %}
-              {% assign authors = page.author %}
-              {% elsif page.authors %}
-              {% assign authors = page.authors %}
-              {% endif %}
-
-              {{ site.data.locales[lang].post.written_by }}
-
-              <em>
-                {% if authors %}
-                {% for author in authors %}
-                {% if site.data.authors[author].url -%}
-                <a href="{{ site.data.authors[author].url }}">{{ site.data.authors[author].name }}</a>
-                {%- else -%}
-                {{ site.data.authors[author].name | default: author }}
-                {%- endif %}
-                {% unless forloop.last %}{{ '</em>, <em>' }}{% endunless %}
-                {% endfor %}
-                {% else %}
-                <a href="{{ site.social.links[0] }}">{{ site.social.name }}</a>
-                {% endif %}
-              </em>
-            </span>
-
-            <div>
-              <!-- pageviews -->
-              {% if site.pageviews.provider and site.analytics[site.pageviews.provider].id %}
-              <span>
-                <em id="pageviews">
-                  <i class="fas fa-spinner fa-spin small"></i>
-                </em>
-                {{ site.data.locales[lang].post.pageview_measure }}
-              </span>
-              {% endif %}
-
-              <!-- read time -->
-              {% include read-time.html content=content prompt=true lang=lang %}
-            </div>
-          </div>
+          <!-- read time -->
+          {% include read-time.html content=content prompt=true lang=lang %}
+        </div>
+      </div>
     </div>
   </header>
 
