--- a/_includes/embed/image.html
+++ b/_includes/embed/image.html
@@ -43,6 +43,8 @@
 {%- assign class = class | append: " " | append: include.class -%}
 {%- endif -%}
 
+{%- assign qs = qs | replace: '+', '%2B' %}
+
 <iframe id="{{ include.id }}" class="{{ class }}" loading="lazy" title="Juncture image viewer" allow="clipboard-write"
   {% if include.aspect %} style="aspect-ratio: {{ include.aspect }};" {% endif %}
   src="{{ '/assets/components/image.html' | relative_url }}?{{ qs }}" allowfullscreen>
