Downsized some images and update vis-network viewer tags

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -178,7 +178,8 @@ attribution {
 
 /* ****** End Entity Popup ****** */
 
-iframe {
+iframe,
+figure {
     box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
 }
 
@@ -466,4 +467,8 @@ figure.iframe-wrapper figcaption {
 
 .post-content {
     font-size: 1.1rem;
+}
+
+[id$="-csv"] {
+    display: none;
 }
