--- a/assets/components/image.html
+++ b/assets/components/image.html
@@ -284,7 +284,7 @@
       seq: params.get("seq") || "0",
       caption: params.get("caption"),
       attribution: params.get("attribution"),
-      cover: params.get("cover") === "1",
+      cover: ['1', 'true', ''].indexOf(params.get("cover")) >= 0,
       region: params.get("region"),   // "full" | "x,y,w,h" | "pct:x,y,w,h"
       rotate: params.get("rotate"),   // "0" | "90" | "!90"
       max: ['', 'true', '1'].includes(params.get("max")),
@@ -507,7 +507,6 @@
         .replace(/\.svg\.png/, '.svg')
         .replace(/\.tiff\.jpg/, '.tiff');
       const _md5 = md5(mwImg);
-      console.log(mwImg, _md5.slice(0, 2),)
 
       const ext = mwImg.split('.').pop().toLowerCase();
 
@@ -601,7 +600,6 @@
       if (looksLikeWikimedia(fallbackImageUrl)) {
         fallbackImageUrl = mwImage(fallbackImageUrl, cfg.max ? -1 : 1200);
         let wcTitle = wcTitleFromUrl(fallbackImageUrl);
-        console.log(wcTitle)
         let wcMeta = await getWcMetadata(wcTitle);
         const { captionHtml } = buildCommonsCaption(wcMeta, wcTitle, cfg.caption);
         cfg.caption = captionHtml;
@@ -697,7 +695,7 @@
       const iframe = window.frameElement;
       const caption = document.getElementById('caption')
       let width = document.getElementById('osd').clientWidth;
-      if (iframe && width) {
+      if (width) {
         if (!imageAspectRatio) {
           const raw = iframe?.style.getPropertyValue("aspect-ratio");
           imageAspectRatio = parseAspectRatio(raw);
@@ -706,7 +704,7 @@
           let captionHeight = caption.clientHeight || parseInt(caption?.style.height?.slice(0, -2)) || 24
           let containerHeight = width / imageAspectRatio + captionHeight
           // (`imageAspectRatio=${imageAspectRatio} width=${width} captionHeight=${captionHeight} computedHeight=${containerHeight}`)
-          iframe.style.height = `${containerHeight}px`
+          if (iframe) iframe.style.height = `${containerHeight}px`
         }
       }
     }
@@ -756,7 +754,7 @@
     const viewer = OpenSeadragon({
       id: "osd",
       prefixUrl: "https://cdn.jsdelivr.net/npm/openseadragon@5.0.1/build/openseadragon/images/",
-      homeFillsViewer: true,
+      homeFillsViewer: cfg.cover,
       showNavigationControl: cfg.max,
       showZoomControl: cfg.max,
       showHomeControl: cfg.max,
@@ -1273,7 +1271,7 @@
       imageSize = item.getContentSize();
 
       let imageAspectRatio = imageSize.x / imageSize.y;
-      setContainerHeight(imageAspectRatio);
+
       setTimeout(() => {
         viewer.viewport.goHome(true);
         requestAnimationFrame(() => {
@@ -1292,7 +1290,12 @@
 
       // Apply clip (IIIF-like)
       const clip = parseRegion(cfg.region, imageSize.x, imageSize.y);
-      if (clip) item.setClip(clip);
+      if (clip) {
+        item.setClip(clip);
+        imageAspectRatio = clip.width / clip.height;
+      }
+
+      setContainerHeight(imageAspectRatio);
 
       // Apply rotate + optional flip
       const rot = parseRotate(cfg.rotate);
